--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
 <body>
 <div data-role="page" id="home">
+sfr
+fr
+r
+fr
+f
+rr
 
 <div data-role="panel" data-position="left" data-display="overlay" id="mypanelc">
    <ul data-role="listview">
